force-app/main/default/objects/Inventory__c/fields/Call_Time_Billable__c.field-meta.xml
<CustomField>
    <fullName>Call_Time_Billable__c</fullName>
    <formula>IF(ISBLANK(Call_Time__c),False, 
IF(Call_Time__c &gt; 200, True, 
False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Time Billable</label>
    <type>Checkbox</type>
</CustomField>