force-app/main/default/objects/Inventory__c/fields/Carpet__c.field-meta.xml
<CustomField>
    <fullName>Carpet__c</fullName>
    <description>(Flooring/Carpeting)</description>
    <inlineHelpText>(Flooring/Carpeting)</inlineHelpText>
    <label>Carpet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Install 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Install 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Install 5 + rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Repair 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Repair 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Repair 5 + rooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>