force-app/main/default/objects/Inventory__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <formula>idCPL_Billing_Opportunity__r.CC_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Email</label>
    <type>Text</type>
</CustomField>