force-app/main/default/objects/Inventory__c/fields/CodetoGetplumbingInbound__c.field-meta.xml
<CustomField>
    <fullName>CodetoGetplumbingInbound__c</fullName>
    <description>“Do we Need a Code to Get in?</description>
    <label>Do we Need a Code to Get in?</label>
    <length>9</length>
    <type>Text</type>
</CustomField>