force-app/main/default/objects/Inventory__c/fields/Collect_Confirm_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>Collect_Confirm_EMAIL__c</fullName>
    <label>Collect And Confirm EMAIL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>