force-app/main/default/objects/Inventory__c/fields/collectthepaymentdetailsInbound__c.field-meta.xml
<CustomField>
    <fullName>collectthepaymentdetailsInbound__c</fullName>
    <description>Perfect, the Technician will collect the payment details at the time of service.  Now just for my notes, will you be using a debit card or credit card? (WFR)</description>
    <label>Perfect, the Technician will collect the</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debit Card.</fullName>
            </value>
            <value>
                <fullName>Credit Card.</fullName>
            </value>
            <value>
                <fullName>Other Payment Method.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>