force-app/main/default/objects/Inventory__c/fields/ColorInbound__c.field-meta.xml
<CustomField>
    <fullName>ColorInbound__c</fullName>
    <description>Is there a particular color you are looking for?</description>
    <label>Is there a particular color you are look</label>
    <length>20</length>
    <type>Text</type>
</CustomField>