force-app/main/default/objects/Inventory__c/fields/CommodebackupInbound__c.field-meta.xml
<CustomField>
    <fullName>CommodebackupInbound__c</fullName>
    <description>Have you had any Commode back-up’s since you purchased the house?</description>
    <label>Have you had any Commode back-up’s since</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>