force-app/main/default/objects/Inventory__c/fields/Complete_landscape_design_or_partial__c.field-meta.xml
<CustomField>
    <fullName>Complete_landscape_design_or_partial__c</fullName>
    <description>(Landscape Design &amp; Install)Is this going to be a complete landscape design or partial?</description>
    <inlineHelpText>(Landscape Design &amp; Install)Is this going to be a complete landscape design or partial?</inlineHelpText>
    <label>Complete landscape design or partial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landscape Design &amp; Install - Partial</fullName>
            </value>
            <value>
                <fullName>Landscape Design &amp; Install - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>