force-app/main/default/objects/Inventory__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>RESET</fullName>
            </value>
            <value>
                <fullName>No Good</fullName>
            </value>
            <value>
                <fullName>No Show  To Confirm</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>