force-app/main/default/objects/Inventory__c/fields/Confirmation_Status_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status_Date_Stamp__c</fullName>
    <label>Confirmation Status Date Stamp</label>
    <type>DateTime</type>
</CustomField>