force-app/main/default/objects/Inventory__c/fields/Confirming_User__c.field-meta.xml
<CustomField>
    <fullName>Confirming_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirming User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory3</relationshipName>
    <type>Lookup</type>
</CustomField>