force-app/main/default/objects/Inventory__c/fields/Consumer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Summary__c</fullName>
    <description>This filed will contains Consumer Summary information of door tag scripts</description>
    <label>Consumer Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>