force-app/main/default/objects/Inventory__c/fields/ContactAreaCode__c.field-meta.xml
<CustomField>
    <fullName>ContactAreaCode__c</fullName>
    <description>What is an alternate phone number he can reach you at starting with the area code first?</description>
    <label>What is an alternate phone number he can</label>
    <length>11</length>
    <type>Text</type>
</CustomField>