force-app/main/default/objects/Inventory__c/fields/CorrectAddress__c.field-meta.xml
<CustomField>
    <fullName>CorrectAddress__c</fullName>
    <description>•Now! Your Correct Address is Cluster Script uestion</description>
    <label>CorrectAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>