force-app/main/default/objects/Inventory__c/fields/CPL_Are_you_in_need_of_Windows_Doors__c.field-meta.xml
<CustomField>
    <fullName>CPL_Are_you_in_need_of_Windows_Doors__c</fullName>
    <description>(Windows/Door)</description>
    <inlineHelpText>(Windows/Door)</inlineHelpText>
    <label>Are you looking for windows or doors?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows/Doors - Windows - 5 or Less</fullName>
            </value>
            <value>
                <fullName>Windows/Doors - Windows - 6 or More</fullName>
            </value>
            <value>
                <fullName>Windows/Doors - Doors - Custom</fullName>
            </value>
            <value>
                <fullName>Windows/Doors - Doors - Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>