force-app/main/default/objects/Inventory__c/fields/CPL_Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>CPL_Destination_Number__c</fullName>
    <label>CPL Destination Number</label>
    <type>Phone</type>
</CustomField>