force-app/main/default/objects/Inventory__c/fields/CPL_Do_you_need_Blinds_and_Shutters__c.field-meta.xml
<CustomField>
    <fullName>CPL_Do_you_need_Blinds_and_Shutters__c</fullName>
    <description>(Blinds/Shutters)How many blinds or shutters are you looking for?</description>
    <inlineHelpText>(Blinds/Shutters)How many blinds or shutters are you looking for?</inlineHelpText>
    <label>How many blinds or shutters are you look</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blinds/Shutters - Blinds - 5 or Below</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Blinds - 6 or more</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Shutters - 5 or Below</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Shutters - 6 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>