force-app/main/default/objects/Inventory__c/fields/CPL_Do_you_need_shelving_storage__c.field-meta.xml
<CustomField>
    <fullName>CPL_Do_you_need_shelving_storage__c</fullName>
    <description>(Closet Remodel)Are you in need of additional shelving or storage systems?</description>
    <inlineHelpText>(Closet Remodel)Are you in need of additional shelving or storage systems?</inlineHelpText>
    <label>You need additional shelving/storage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closet Organizing/Garage Shelving - Shelves - 1-2 Closets</fullName>
            </value>
            <value>
                <fullName>Closet Organizing/Garage Shelving - Storage System - 1-2 Closets</fullName>
            </value>
            <value>
                <fullName>Closet Organizing/Garage Shelving - Storage System - 3 + Closets</fullName>
            </value>
            <value>
                <fullName>Closet Organizing/Garage Shelving - Shelves - 3 + Closets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>