force-app/main/default/objects/Inventory__c/fields/CPL_Interior_painting_Exterior_painting__c.field-meta.xml
<CustomField>
    <fullName>CPL_Interior_painting_Exterior_painting__c</fullName>
    <description>(Painting (Exterior/Interior))Is it an interior or exterior painting project?</description>
    <inlineHelpText>(Painting (Exterior/Interior))Is it an interior or exterior painting project?</inlineHelpText>
    <label>Interior painting/Exterior painting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Painting (Exterior/Interior) - Exterior - partial</fullName>
            </value>
            <value>
                <fullName>Painting (Exterior/Interior) - Interior - 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Painting (Exterior/Interior) - Interior - 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Painting (Exterior/Interior) - Interior rooms - 5+ rooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>