force-app/main/default/objects/Inventory__c/fields/CPL_Is_this_complete_remodel_or_partial__c.field-meta.xml
<CustomField>
    <fullName>CPL_Is_this_complete_remodel_or_partial__c</fullName>
    <description>(Home Remodeling)Is this going to be a complete remodel or partial?</description>
    <inlineHelpText>(Home Remodeling)Is this going to be a complete remodel or partial?</inlineHelpText>
    <label>Is this complete remodel or partial?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Remodeling - Complete</fullName>
            </value>
            <value>
                <fullName>Home Remodeling - Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>