force-app/main/default/objects/Inventory__c/fields/CPL_Is_this_for_carpet_tile_cleaning__c.field-meta.xml
<CustomField>
    <fullName>CPL_Is_this_for_carpet_tile_cleaning__c</fullName>
    <description>(Carpet/Tile Cleaning) Is this going to be for carpet/tile cleaning?</description>
    <inlineHelpText>(Carpet/Tile Cleaning) Is this going to be for carpet/tile cleaning?</inlineHelpText>
    <label>Is this for carpet/tile cleaning?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carpet/Tile Cleaning - Carpet Cleaning - 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning - Carpet Cleaning - 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning - Carpet Cleaning- 5 + rooms</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning - Tile Cleaning - 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning - Tile Cleaning - 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning - Tile Cleaning - 5 + rooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>