force-app/main/default/objects/Inventory__c/fields/CPL_New_electrical_work_existing_repair__c.field-meta.xml
<CustomField>
    <fullName>CPL_New_electrical_work_existing_repair__c</fullName>
    <description>(Electrician)Do you need existing electrical repaired or do you need new electrical work installed?</description>
    <inlineHelpText>(Electrician)Do you need existing electrical repaired or do you need new electrical work installed?</inlineHelpText>
    <label>New electrical work/existing repaired</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electrician - New Installation</fullName>
            </value>
            <value>
                <fullName>Electrician - Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>