force-app/main/default/objects/Inventory__c/fields/CPL_New_install_Repair_existing_gutters__c.field-meta.xml
<CustomField>
    <fullName>CPL_New_install_Repair_existing_gutters__c</fullName>
    <description>(Gutters)Are you looking to have existing gutters repaired or do you need new ones installed?</description>
    <inlineHelpText>(Gutters)Are you looking to have existing gutters repaired or do you need new ones installed?</inlineHelpText>
    <label>New ones install/Repair existing gutters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gutters - New</fullName>
            </value>
            <value>
                <fullName>Gutters - Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>