force-app/main/default/objects/Inventory__c/fields/CPL_New_install_Repair_the_existing__c.field-meta.xml
<CustomField>
    <fullName>CPL_New_install_Repair_the_existing__c</fullName>
    <description>(Roofing)Are you going to need repairs to the existing roof or a new one installed?</description>
    <inlineHelpText>(Roofing)Are you going to need repairs to the existing roof or a new one installed?</inlineHelpText>
    <label>New one installed/Repair the existing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roofing - New Install</fullName>
            </value>
            <value>
                <fullName>Roofing - Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>