force-app/main/default/objects/Inventory__c/fields/CPL_new_plumbing_install__c.field-meta.xml
<CustomField>
    <fullName>CPL_new_plumbing_install__c</fullName>
    <description>(Plumber)What type of plumbing service are you in need of?</description>
    <inlineHelpText>(Plumber)What type of plumbing service are you in need of?</inlineHelpText>
    <label>What type of plumbing service need</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plumber - Existing Repair?</fullName>
            </value>
            <value>
                <fullName>Plumber - Leak Detection?</fullName>
            </value>
            <value>
                <fullName>Plumber - New Install?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>