force-app/main/default/objects/Inventory__c/fields/CPL_New_siding_Repair_the_existing__c.field-meta.xml
<CustomField>
    <fullName>CPL_New_siding_Repair_the_existing__c</fullName>
    <description>(Siding)Do you need new siding installed or looking to repair existing siding?</description>
    <inlineHelpText>(Siding)Do you need new siding installed or looking to repair existing siding?</inlineHelpText>
    <label>New siding/Repair the existing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Siding - New</fullName>
            </value>
            <value>
                <fullName>Siding - Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>