force-app/main/default/objects/Inventory__c/fields/CPL_One_time_service_or_ongoing_service__c.field-meta.xml
<CustomField>
    <fullName>CPL_One_time_service_or_ongoing_service__c</fullName>
    <description>(Pest Control)Is this going to be a one-time service or will you need it to be an ongoing service?</description>
    <inlineHelpText>(Pest Control)Is this going to be a one-time service or will you need it to be an ongoing service?</inlineHelpText>
    <label>One-time service or an ongoing service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pest Control - One Time</fullName>
            </value>
            <value>
                <fullName>Pest Control - Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>