force-app/main/default/objects/Inventory__c/fields/CPL_What_type_of_fencing_are_you_in_need__c.field-meta.xml
<CustomField>
    <fullName>CPL_What_type_of_fencing_are_you_in_need__c</fullName>
    <description>(Fencing)</description>
    <inlineHelpText>(Fencing)</inlineHelpText>
    <label>What type of fencing are you in need of?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fencing - Complete Brick</fullName>
            </value>
            <value>
                <fullName>Fencing - Complete Concrete</fullName>
            </value>
            <value>
                <fullName>Fencing - Complete Iron</fullName>
            </value>
            <value>
                <fullName>Fencing - Complete Vinyl</fullName>
            </value>
            <value>
                <fullName>Fencing - Complete Wood</fullName>
            </value>
            <value>
                <fullName>Fencing - Partial Brick</fullName>
            </value>
            <value>
                <fullName>Fencing - Partial Concrete</fullName>
            </value>
            <value>
                <fullName>Fencing - Partial Iron</fullName>
            </value>
            <value>
                <fullName>Fencing - Partial Vinyl</fullName>
            </value>
            <value>
                <fullName>Fencing - Partial Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>