force-app/main/default/objects/Inventory__c/fields/CPL_What_type_of_granite_or_marble_work__c.field-meta.xml
<CustomField>
    <fullName>CPL_What_type_of_granite_or_marble_work__c</fullName>
    <description>(Granite/Marble)What type of granite or marble work are you in need of?</description>
    <inlineHelpText>(Granite/Marble)What type of granite or marble work are you in need of?</inlineHelpText>
    <label>What type of granite or marble work need</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Granite/Marble - Granite - Bathroom</fullName>
            </value>
            <value>
                <fullName>Granite/Marble - Granite - Countertops</fullName>
            </value>
            <value>
                <fullName>Granite/Marble - Granite - Fireplace</fullName>
            </value>
            <value>
                <fullName>Granite/Marble - Marble - Bathroom</fullName>
            </value>
            <value>
                <fullName>Granite/Marble - Marble - Countertops</fullName>
            </value>
            <value>
                <fullName>Granite/Marble - Marble - Fireplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>