force-app/main/default/objects/Inventory__c/fields/CPL_What_type_of_service_are_you_in_need__c.field-meta.xml
<CustomField>
    <fullName>CPL_What_type_of_service_are_you_in_need__c</fullName>
    <description>(HVAC Services)</description>
    <inlineHelpText>(HVAC Services)</inlineHelpText>
    <label>What type of service are you in need of?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HVAC Services - Upgrade</fullName>
            </value>
            <value>
                <fullName>HVAC Services - Repair</fullName>
            </value>
            <value>
                <fullName>HVAC Services - Home Warranty Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>