force-app/main/default/objects/Inventory__c/fields/CPL_Wood_Carpet_Tile__c.field-meta.xml
<CustomField>
    <fullName>CPL_Wood_Carpet_Tile__c</fullName>
    <description>(Flooring/Carpeting)</description>
    <inlineHelpText>(Flooring/Carpeting)</inlineHelpText>
    <label>What type of flooring are you inneed of?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Install 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Install 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Repair 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Carpet - Repair 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Tile - Install 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Tile - Install 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Tile - Install 5 + rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Tile - Repair 5 + rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Tile -Repair 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Install 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Install 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Install 5 + rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Refinish 3-4 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Refinish 5 + rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Repair 1-2 rooms</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting - Wood - Repair 5 + rooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>