force-app/main/default/objects/Inventory__c/fields/Create_Billing__c.field-meta.xml
<CustomField>
    <fullName>Create_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Billing</label>
    <type>Checkbox</type>
</CustomField>