force-app/main/default/objects/Inventory__c/fields/CurrentlyUnderContract__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyUnderContract__c</fullName>
    <description>Currently Under Contract.</description>
    <label>Currently Under Contract.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>