force-app/main/default/objects/Inventory__c/fields/currentutilitycompanyInbound__c.field-meta.xml
<CustomField>
    <fullName>currentutilitycompanyInbound__c</fullName>
    <description>Do you happen to know the name of your current utility company?</description>
    <label>Do you happen to know the name of your c</label>
    <length>20</length>
    <type>Text</type>
</CustomField>