force-app/main/default/objects/Inventory__c/fields/Daily_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Daily_Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Call Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>