force-app/main/default/objects/Inventory__c/fields/Date_OBCC_Appointment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_OBCC_Appointment_Approved__c</fullName>
    <description>The date that the approved check box was checked.</description>
    <inlineHelpText>The date that the approved check box was checked.</inlineHelpText>
    <label>Date OBCC Appointment Approved</label>
    <type>DateTime</type>
</CustomField>