force-app/main/default/objects/Inventory__c/fields/DeepdishTub__c.field-meta.xml
<CustomField>
    <fullName>DeepdishTub__c</fullName>
    <description>When you eventually Remodel your Bathroom do you think you’ll want to Convert it Over to a Walk-in-Shower… Or do you think you’ll Just do a Deep-dish Tub?</description>
    <label>When you eventually Remodel your Bathroo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Walk-in-Shower.</fullName>
            </value>
            <value>
                <fullName>Deep-dish Tub.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>