force-app/main/default/objects/Inventory__c/fields/Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Number__c</fullName>
    <label>Destination Number</label>
    <type>Phone</type>
</CustomField>