force-app/main/default/objects/Inventory__c/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <label>DID</label>
    <type>Phone</type>
</CustomField>