force-app/main/default/objects/Inventory__c/fields/DID_Name__c.field-meta.xml
<CustomField>
    <fullName>DID_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DID Name</label>
    <referenceTo>DID__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>