force-app/main/default/objects/Inventory__c/fields/DIDLookupID__c.field-meta.xml
<CustomField>
    <fullName>DIDLookupID__c</fullName>
    <label>DIDLookupID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>