force-app/main/default/objects/Inventory__c/fields/DIDtoTXT__c.field-meta.xml
<CustomField>
    <fullName>DIDtoTXT__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(  DID__c  , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),&apos; &apos;,&apos;&apos;)</formula>
    <label>DIDtoTXT</label>
    <type>Text</type>
</CustomField>