force-app/main/default/objects/Inventory__c/fields/discountedratesInbound__c.field-meta.xml
<CustomField>
    <fullName>discountedratesInbound__c</fullName>
    <description>Okay and are you on any discounted rates with them? (ex. Military, Medical)</description>
    <label>Okay and are you on any discounted rates</label>
    <length>20</length>
    <type>Text</type>
</CustomField>