force-app/main/default/objects/Inventory__c/fields/Dispatch_Email_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Email_Sent_Date_Time__c</fullName>
    <label>Dispatch Email Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>