force-app/main/default/objects/Inventory__c/fields/Dispatch_Rep_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Rep_CC_Email__c</fullName>
    <label>Dispatch Rep CC Email</label>
    <type>Email</type>
</CustomField>