force-app/main/default/objects/Inventory__c/fields/Dispatching_User__c.field-meta.xml
<CustomField>
    <fullName>Dispatching_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatching User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory4</relationshipName>
    <type>Lookup</type>
</CustomField>