force-app/main/default/objects/Inventory__c/fields/Disposition_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Date_Time__c</fullName>
    <label>Disposition Date/Time</label>
    <type>DateTime</type>
</CustomField>